script to fetch the files, remove limnoria links

--- a/Home.html
+++ b/Home.html
@@ -51,14 +51,13 @@
 	  <li><a href="build.html">BuildServ</a></li>
 	  <li><a href="irc.html">IRC</a></li>
 	  <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
-	  <li><a href="Limnoria">Limnoria</a></li>
-            </ul>
-            <h2>Wolfy1339<br><small>Community Hub</small></h2>
+        </ul>
+        <h2>Wolfy1339<br><small>Community Hub</small></h2>
         </div>
         <hr>
         <div class="jumbotron">
-          <!--[if lt IE 9]><!--><img src="img/wolf.svg" id="hub-logo" type="image/svg+xml" alt="wolfy1339" height="250em" width="250em" /><!--[endif]>-->
-          <!--[if lt IE 9]><img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="250em" width="250em" /><![endif]-->
+          <!--[if lt IE 9]><!--><img src="img/wolf.svg" id="hub-logo" type="image/svg+xml" alt="wolfy1339" height="250em" width="250em" class="img-responsive" /><!--[endif]>-->
+          <!--[if lt IE 9]><img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="250em" width="250em" class="img-responsive" /><![endif]-->
           <h1>Wolfy1339</h1>
           <div id="hub-jumbotron-text">
             <p class="lead">About me</p>
