Removed buildserv, add credits to doxin for design

--- a/build.html
+++ b/build.html
@@ -54,37 +54,13 @@
         <h2>wolfy1339<br><small>BuildServ</small></h2>
         </div>
         <hr/>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="alert alert-warning">
-                      <strong>Lost?</strong>
-                      If you're unsure what The Powder Toy even is, or you just want to play it you should <a href="http://powdertoy.co.uk/">go to the main website.</a>
-                </div>
-            </div>
+        <div class="alert alert-warning">
+            <strong>Warning!</strong> This, isn't my BuildServ, I planned on making one but it never worked out. For the original version please see <a href="//buildserv.superdoxin.com">SuperDoxin's BuildServ</a></strong>
         </div>
-        <div class="row">
-            <div class="col-md-3">
-                <h2>What is this?</h2>
-                <p>This is a buildserv. if you want to keep track of the development of The Powder Toy you can use the binaries here.</p>
-                <p>Please keep in mind you can't publish saves using these, currently only 32bit builds are available.</p>
-                <p>All binaries present on this site are built nightly by an automated system. <strong>The binaries might not even run at all.</strong> They might trip your grandmother. <strong>Use at your own risk.</strong></p>
-                <p>Just click the status image to start downloading. You can still download the last working build if the current build failed by clicking the status image.</p>
-            </div>  
-            <div class="col-md-3">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/200px-Tux.svg.png" width="64" id="build-os"/>
-                <h2>Linux 32bit</h2>
-                <a href="http://buildserv.superdoxin.com/downloads/The-Powder-Toy/32bit-linux">
-                    <img src="http://buildserv.superdoxin.com/The-Powder-Toy_32bit-linux.png">
-                </a>
-            </div>
-            <div class="col-md-3">
-                <img src="https://upload.wikimedia.org/wikipedia/de/thumb/2/2b/Windows_logo_2012-Black.svg/200px-Windows_logo_2012-Black.svg.png" width="64" id="build-os"/>
-                <h3>Windows 32bit</h3>
-                <a href="http://buildserv.superdoxin.com/downloads/The-Powder-Toy/32bit-windows.exe">
-                    <img id="build-status" src="http://buildserv.superdoxin.com/The-Powder-Toy_32bit-windows.png">
-                </a>
-            </div>
-        </div>  
+        <hr>
+        <div class="footer">
+            Credit to Doxin for design and idea. If you'd like to help me make a buildserv, come on IRC.
+        </div>
     </div>
 </body>
 </html>
