Remove build.css 1of2

--- a/build.html
+++ b/build.html
@@ -30,7 +30,6 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet prefetch" />
     <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet prefetch" />
     <link href="style.css" rel="stylesheet prefetch" />
-    <link href="build.css" rel="stylesheet prefetch" />
 
     <!-- Compatibility layer for ie -->
     <!--[if lt IE 9]>
@@ -54,7 +53,7 @@
         <h2>wolfy1339<br><small>BuildServ</small></h2>
         </div>
         <hr/>
-        <div class="alert alert-warning">
+        <div class="alert alert-danger">
             <strong>Warning!</strong> This, isn't my BuildServ, I planned on making one but it never worked out. For the original version please see <a href="//buildserv.superdoxin.com">SuperDoxin's BuildServ</a></strong>
         </div>
         <hr>
