--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-md-6">
                 <a href="Home.html">
-                    <img src="img/wolf.svg" alt="wolfy1339's howling wolf logo" class="logo omg-responsive" />
+                    <img src="img/wolf.svg" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
                     <h3 title="Access Wolfy1339's website">wolfy1339</h3>
                 </a>
             </div>
