--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <hr>
         <div class="footer">
             <a class="text-muted">
-                Some styles on this page are taken from  <a href="//powdertoy.co.uk">The <powder Toy</a>
+                Some styles on this page are taken from  <a href="//powdertoy.co.uk">The Powder Toy</a>
             </a>
         </div>
     </div>
