Fix HTML and add new logo

--- a/404.html
+++ b/404.html
@@ -77,7 +77,7 @@
       <hr>
 
       <div class="footer">
-        <a class="muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
+        <a class="text-muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
       </div>
 
     </div>
