--- a/Home.html
+++ b/Home.html
@@ -56,8 +56,7 @@
         </div>
         <hr>
         <div class="jumbotron">
-          <!--[if lt IE 9]><!--><img src="img/wolf.svg" id="hub-logo" type="image/svg+xml" alt="wolfy1339" height="250em" width="250em" class="img-responsive" /><!--[endif]>-->
-          <!--[if lt IE 9]><img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="250em" width="250em" class="img-responsive" /><![endif]-->
+          <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="250em" width="250em" class="img-responsive" />
           <h1>Wolfy1339</h1>
           <div id="hub-jumbotron-text">
             <p class="lead">About me</p>
@@ -81,7 +80,6 @@
             <p>Meet other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=powder">Webchat</a> for a quick talk.</p>
           </div>
           <div class="col-md-6">
-            <!-- TODO: Fix the search query with a real tag search -->
             <a href="http://powdertoy.co.uk/Browse.html?Search_Query=wolfy1339">
               <img src="img/powder.png" alt="TPT" rel="prefetch" height="64" width="64">
               <h4>Creations</h4>
@@ -99,7 +97,7 @@
       </div>
       <hr>
       <div class="footer">
-        <a class="muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
+        <a class="text-muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
       </div>
     </div>
 
