--- a/mod.html
+++ b/mod.html
@@ -99,7 +99,7 @@
     </div>
     <hr>
     <div class="footer">
-      <a class="text-muted" href="https://github.com/Brilliant-Minds/Brilliant-Minds.github.io">repo</a>
+      <a class="text-text-muted" href="https://github.com/Brilliant-Minds/Brilliant-Minds.github.io">repo</a>
     </div>
   </div>
   <!-- JavaScript -->
