--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Fix for IE mobile -->
     <script type="text/javascript">if(navigator.userAgent.match(/IEMobile\/10\.0/)){var msViewportStyle=document.createElement("style");msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));document.querySelector("head").appendChild(msViewportStyle)}</script>
-    <style>.row{margin-top:20px;}body{background-color:#eee;}a h3{text-indent:15%}.logo{border-radius:10px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,.45),inset 0 2px 0 rgba(255,255,255,.4);background:linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-moz-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-webkit-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-o-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-ms-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%)}</style>
+    <style>.row{margin-top:20px;}body{background-color:#eee;}a h3{text-indent:15%}.logo{display:inline-block;border-radius:10px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,.45),inset 0 2px 0 rgba(255,255,255,.4);max-height:256px;background:linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-moz-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-webkit-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-o-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-ms-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%)}</style>
 </head>
 <body>
     <div class="container">
@@ -42,16 +42,22 @@
         <div class="row">
             <div class="col-md-6">
                 <a href="Home.html">
-                    <img src="img/wolf.svg" width="256px" height="256px" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
+                    <img src="img/wolf.jpeg" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
                     <h3 title="Access Wolfy1339's website">wolfy1339</h3>
                 </a>
             </div>
             <div class="col-md-6">
                 <a href="//techno156.wolfy1339.tk">
-                    <img src="img/techno156.png" width="256px" height="256px" type="image/png" class="logo img-responsive" />
+                    <img src="img/techno156.png" type="image/png" class="logo img-responsive" />
                     <h3 title="Access techno156's wesite">techno156</h3>
                 </a>
             </div>
+        </div>
+        <hr>
+        <div class="footer">
+            <a class="text-muted">
+                Some styles on this page are taken from  <a href="//powdertoy.co.uk">The Powder Toy</a>
+            </a>
         </div>
     </div>
 </body>
