add styles to style.css make logo smaller

--- a/Home.html
+++ b/Home.html
@@ -56,7 +56,7 @@
         </div>
         <hr>
         <div class="jumbotron">
-          <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" height="250em" width="250em" class="img-responsive" />
+          <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" width="175px" class="img-responsive logo" />
           <h1>Wolfy1339</h1>
           <div id="hub-jumbotron-text">
             <p class="lead">About me</p>
