--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
 
     <!-- Fix for IE mobile -->
     <script type="text/javascript">if(navigator.userAgent.match(/IEMobile\/10\.0/)){var msViewportStyle=document.createElement("style");msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));document.querySelector("head").appendChild(msViewportStyle)}</script>
-    <style>.row{margin-top:20px;}body{background-color:#eee;}a h3{text-indent:15%}.logo{display:inline-block;border-radius:10px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,.45),inset 0 2px 0 rgba(255,255,255,.4);max-height:256px;background:linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-moz-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-webkit-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-o-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%);background:-ms-linear-gradient(top,rgba(255,255,255,.15)0,rgba(0,0,0,.15)100%)}</style>
 </head>
-<body>
+<body class="index">
     <div class="container">
         <h1>Welcome, please choose which website to visit</h1>
-        <div class="row">
+        <div class="row" id="index-row">
             <div class="col-md-6">
                 <a href="Home.html">
                     <img src="img/wolf.jpeg" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
