--- a/ascii.html
+++ b/ascii.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Wolfy1339 &middot; Skeleton</title>
+    <title>Wolfy1339 &middot; ASCII Art/title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- favicons -->
