--- a/ascii.html
+++ b/ascii.html
@@ -42,7 +42,7 @@
             <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
             <li class="active"><a href="ascii.html">ASCII Art</a></li>
           </ul>
-          <h2>Wolfy1339<br><small>Add title here!</small></h2>
+          <h2>Wolfy1339<br><small>ASCII Art</small></h2>
       </div>
 
       <hr>
