--- a/ascii.html
+++ b/ascii.html
@@ -47,7 +47,7 @@
 
       <hr>
 
-      <iframe src="ascii/BMN.html"></iframe>
+      <iframe src="ascii/BMN.html" height="279px" width="880px"></iframe>
 
       <hr>
 
