--- a/ascii.html
+++ b/ascii.html
@@ -47,7 +47,7 @@
 
       <hr>
 
-      <iframe src="ascii/BMN.html" height="279px" width="880px"></iframe>
+      <iframe src="ascii/BMN.html" height="300px" width="900px" style="position:relative;right:50px;"></iframe>
 
       <hr>
 
