--- a/ascii.html
+++ b/ascii.html
@@ -47,7 +47,10 @@
 
       <hr>
 
+      <h4>BMN Logo</h4>
       <iframe src="ascii/BMN.html" height="300px" width="900px" style="position:relative;right:50px;"></iframe>
+      <h4>My logo</h4>
+      <iframe src="ascii/wolfy1339.html"></iframe>
 
       <hr>
 
