--- a/ascii.html
+++ b/ascii.html
@@ -50,7 +50,7 @@
       <h4>BMN Logo</h4>
       <iframe src="ascii/BMN.html" height="300px" width="900px" style="position:relative;right:50px;"></iframe>
       <h4>My logo</h4>
-      <iframe src="ascii/wolfy1339.html"></iframe>
+      <iframe src="ascii/wolfy1339.html" height="290px" width="355px"></iframe>
 
       <hr>
 
