--- a/irc.html
+++ b/irc.html
@@ -61,7 +61,10 @@
       	    </a>
       	    <p>You can find me wolfy1339 and my bots on the Freendoe IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
       	    
-      	    <h4>Bots</h4>
+      	    <a href="https://github.com/wolfy1339?tab=repositories">
+      	      <img src="img/github.png">
+      	      <h4>Bots</h4>
+      	    </a>
       	    <p>You can find all my bots' source code on <a href="https://github.com/wolfy1339?tab=repositories">my GitHub</a></p>
       	  </div>
         </div>
