Use Jekyll instead of plain HTML

--- a/index.html
+++ b/index.html
@@ -1,63 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta charset="utf-8"/>
-    <title>Wolfy1339 &middot; Home</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- favicons -->
-    <link rel="icon" href="img/wolf.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon32.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="img/favicon48.png" />
-    <!-- meta -->
-    <meta name="keywords" content="wolfy1339, bmn, powder toy, tpt, techno156" />
-    <meta name="description" content="Welcome to wolfy1339's Website Home page. Here will be the landing page for my website. You can choose to access techno156's webpage ot to access mine.">
-    <meta name="google-site-verification" content="4lR7BiwhfA_pRKzUqOfetn4TYMokB6DVHsnIe63-3Rg" />
-    <meta name="google-site-verification" content="ED3ELN5Ld4TA27rVYMx6_hoXMDZqA3oa23fGr-Egj5g" />
-    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
-    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
-   
-    <!-- flip-Ahead -->
-    <!--<link rel="next" href="infos.html" />-->
-
-    <!-- CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet prefetch" />
-    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet prefetch" />
-    <link href="style.css" rel="stylesheet prefetch" />
-
-    <!-- Compatibility layer for ie -->
-    <!--[if lt IE 9]>
-    <script src="html5shiv.js"></script>
-    <script src="respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Fix for IE mobile -->
-    <script type="text/javascript">if(navigator.userAgent.match(/IEMobile\/10\.0/)){var msViewportStyle=document.createElement("style");msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));document.querySelector("head").appendChild(msViewportStyle)}</script>
-</head>
-<body class="index">
-    <div class="container">
-        <h1>Welcome, please choose which website to visit</h1>
-        <div class="row" id="index-row">
-            <div class="col-md-6">
-                <a href="Home.html">
-                    <img src="img/wolf.jpeg" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
-                    <h3 title="Access Wolfy1339's website">wolfy1339</h3>
-                </a>
-            </div>
-            <div class="col-md-6">
-                <a href="//techno156.wolfy1339.tk">
-                    <img src="img/techno156.png" type="image/png" class="logo img-responsive" />
-                    <h3 title="Access techno156's wesite">techno156</h3>
-                </a>
-            </div>
-        </div>
-        <hr>
-        <div class="footer">
-            <a class="text-muted">
-                Some styles on this page are taken from  <a href="//powdertoy.co.uk">The Powder Toy</a>
-            </a>
-        </div>
-    </div>
-</body>
-</html>
+---
+layout: default
+title: Index
+description: Welcome to wolfy1339's Website Home page. Here will be the landing page for my website. You can choose to access techno156's webpage ot to access mine.
+---
+<h1>Welcome, please choose which website to visit</h1>
+<div class="row" id="index-row">
+  <div class="col-md-6">
+    <a href="Home.html">
+      <img src="img/wolf.jpeg" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
+      <h3 title="Access Wolfy1339's website">wolfy1339</h3>
+    </a>
+  </div>
+  <div class="col-md-6">
+    <a href="//techno156.wolfy1339.tk">
+      <img src="img/techno156.png" type="image/png" class="logo img-responsive" />
+      <h3 title="Access techno156's wesite">techno156</h3>
+    </a>
+  </div>
+</div>
