--- a/Home.html
+++ b/Home.html
@@ -1,109 +1,45 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Wolfy1339 &middot; Sandbox</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- favicons -->
-    <link rel="icon" href="img/wolf.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon32.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="img/favicon48.png" />
-    <!-- meta -->
-    <meta name="keywords" content="wolfy1339, bmn, powder toy, tpt" />
-    <meta name="description" content="Welcome to wolfy1339's 'Sandbox Website'. Here there will be lot's of random things." />
-    <meta name="google-site-verification" content="4lR7BiwhfA_pRKzUqOfetn4TYMokB6DVHsnIe63-3Rg" />
-    <meta name="google-site-verification" content="ED3ELN5Ld4TA27rVYMx6_hoXMDZqA3oa23fGr-Egj5g" />
-    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
-    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
-    <!-- Live Tile & Taskbar Pin-->
-    <!--<meta name="application-name" content="Wolfy1339" />
-    <meta name="msapplication-starturl" content="http://wolfy1339.tk" />
-    <meta name="msapplication-navbutton-color" content="#ebf5ff" />
-    <meta name="msapplication-window" content="width=1024;height=768" />
-    <meta name="msapplication-tooltip" content="Go to Wolfy1339" />
-    <meta name="msapplication-task" content="name=Infos;action-uri=http://brilliant-minds.tk/index.html" />-->
-    
-    <!-- flip-Ahead -->
-    <!--<link rel="next" href="infos.html" />-->
-
-    <!-- CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet prefetch" />
-    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet prefetch" />
-    <link href="style.css" rel="stylesheet prefetch" />
-
-    <!-- Compatibility layer for ie -->
-    <!--[if lt IE 9]>
-    <script src="html5shiv.js"></script>
-    <script src="respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Fix for IE mobile -->
-    <script type="text/javascript">if(navigator.userAgent.match(/IEMobile\/10\.0/)){var msViewportStyle=document.createElement("style");msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));document.querySelector("head").appendChild(msViewportStyle)}</script>
-</head>
-<body>
-    <div class="container">
-      <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="Home.html">Hub</a></li>
-          <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
-	  <li><a href="build.html">BuildServ</a></li>
-	  <li><a href="irc.html">IRC</a></li>
-	  <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
-        </ul>
-        <h2>Wolfy1339<br><small>Community Hub</small></h2>
-        </div>
-        <hr>
-        <div class="jumbotron">
-          <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" width="175px" class="img-responsive logo" />
-          <h1>Wolfy1339</h1>
-          <div id="hub-jumbotron-text">
-            <p class="lead">About me</p>
-            <p class="sub-lead">I'm <span title="[wolf,y '1339">wolfy1339</span>. I do very, very basic <a href="http://en.wikipedia.org/wiki/Lua_programming_language" title="It's not an acronym, 2nd and 3rd letters are lowercase.">Lua</a> &amp; <a href="http://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
-            <br/>My site is built in <a href="http://en.wikipedia.org/wiki/HTML5">HTML5</a> and using <a href="http://getbootstrap.com">Twitter Bootstrap</a></p>
-            <a class="btn btn-lg btn-success" href="http://powdertoy.co.uk/Groups/Page/View.html?Group=832">Group Page</a>
-          </div>
-        </div>
-        <hr>
-        <div class="row subheadings">
-          <div class="col-md-6">
-            <a href="https://github.com/wolfy1339">
-              <img src="img/github.png" id ="GitHub" alt="GitHub" rel="prefetch" height="64" width="64">
-              <h4>GitHub</h4>
-            </a>
-            <p>I participate in community projects like the BMN <a href="http://brilliant-minds.github.io/mod.html">The Powder Toy mod</a> and their <a href="http://brilliant-minds.github.io">website</a>.</p>
-            <a href="irc://irc.freenode.net:6667/powder">
-              <img src="img/irc.png" alt="Freenode" rel="prefetch" height="64" width="64">
-              <h4>IRC</h4>
-            </a>
-            <p>Meet other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=powder">Webchat</a> for a quick talk.</p>
-          </div>
-          <div class="col-md-6">
-            <a href="http://powdertoy.co.uk/Browse.html?Search_Query=wolfy1339">
-              <img src="img/powder.png" alt="TPT" rel="prefetch" height="64" width="64">
-              <h4>Creations</h4>
-            </a>
-            <p>Search for all TPT saves tagged with "wolfy1339".<br>&nbsp;</p>
-            <br>
-            <h4>More stuff</h4>
-            <ul class="forum-list">
-              <li><a href="http://powdertoy.co.uk/Discussions/Thread/View.html?Thread=17758">The Group thread</a> at the public TPT forums</li>
-              <li><a href="http://www.youtube.com/user/domthegamerofficial">Powder Toy tutorials</a> by dom2mom</li>
-              <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&amp;Thread=1444">Group Announcements</a> and</li>
-              <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&amp;Thread=1427">AC Discussion Page</a> on the group forums</li>
-            </ul>
-          </div>
-      </div>
-      <hr>
-      <div class="footer">
-        <a class="text-muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
-      </div>
-    </div>
-
-    <!-- JavaScript -->
-    <script src="bootstrap/js/jquery.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <!--<script type="text/javascript">var imgPath = new String();imgPath = document.getElementById("GitHub").src="img/github.png";var custHeight=screen.height;var custWidth=screen.width;if (custWidth <= 960){document.getElementById("GitHub").src = "img/github-120.png";}}</script>-->   
-</body>
-</html>
+---
+layout: default
+title: Sandbox
+---
+<div class="jumbotron">
+  <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" width="175px" class="img-responsive logo" />
+  <h1>Wolfy1339</h1>
+  <div id="hub-jumbotron-text">
+    <p class="lead">About me</p>
+    <p class="sub-lead">I'm <span title="[wolf,y '1339">wolfy1339</span>. I do very, very basic <a href="http://en.wikipedia.org/wiki/Lua_programming_language" title="It's not an acronym, 2nd and 3rd letters are lowercase.">Lua</a> &amp; <a href="http://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
+      <br/>My site is built in <a href="http://en.wikipedia.org/wiki/HTML5">HTML5</a> and using <a href="http://getbootstrap.com">Twitter Bootstrap</a>
+    </p>
+    <a class="btn btn-lg btn-success" href="http://powdertoy.co.uk/Groups/Page/View.html?Group=832">Group Page</a>
+  </div>
+</div>
+<hr>
+<div class="row subheadings">
+  <div class="col-md-6">
+    <a href="https://github.com/wolfy1339">
+      <img src="img/github.png" id ="GitHub" alt="GitHub" rel="prefetch" height="64" width="64">
+      <h4>GitHub</h4>
+    </a>
+    <p>I participate in community projects like the BMN <a href="http://brilliant-minds.github.io/mod.html">The Powder Toy mod</a> and their <a href="http://brilliant-minds.github.io">website</a>.</p>
+    <a href="irc://irc.freenode.net:6667/powder">
+      <img src="img/irc.png" alt="Freenode" rel="prefetch" height="64" width="64">
+      <h4>IRC</h4>
+    </a>
+    <p>Meet other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=powder">Webchat</a> for a quick talk.</p>
+  </div>
+  <div class="col-md-6">
+    <a href="http://powdertoy.co.uk/Browse.html?Search_Query=wolfy1339">
+      <img src="img/powder.png" alt="TPT" rel="prefetch" height="64" width="64">
+      <h4>Creations</h4>
+    </a>
+    <p>Search for all TPT saves tagged with "wolfy1339".<br>&nbsp;</p>
+    <br>
+    <h4>More stuff</h4>
+    <ul class="forum-list">
+      <li><a href="http://powdertoy.co.uk/Discussions/Thread/View.html?Thread=17758">The Group thread</a> at the public TPT forums</li>
+      <li><a href="http://www.youtube.com/user/domthegamerofficial">Powder Toy tutorials</a> by dom2mom</li>
+      <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&amp;Thread=1444">Group Announcements</a> and</li>
+      <li><a href="http://powdertoy.co.uk/Groups/Thread/View.html?Group=832&amp;Thread=1427">AC Discussion Page</a> on the group forums</li>
+    </ul>
+  </div>
+</div>
