--- a/irc.html
+++ b/irc.html
@@ -1,84 +1,18 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Wolfy1339 &middot; Sandbox</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- favicons -->
-    <link rel="icon" href="img/wolf.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon32.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="img/favicon48.png" />
-    <!-- meta -->
-    <meta name="keywords" content="wolfy1339, bmn, powder toy, tpt" />
-    <meta name="description" content="Welcome to wolfy1339's 'Sandbox Website'. Here there will be lot's of random things." />
-    <meta name="google-site-verification" content="4lR7BiwhfA_pRKzUqOfetn4TYMokB6DVHsnIe63-3Rg" />
-    <meta name="google-site-verification" content="ED3ELN5Ld4TA27rVYMx6_hoXMDZqA3oa23fGr-Egj5g" />
-    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
-    <meta name="msvalidate.01" content="57B77663C1E3F51F4E0EB692FABFB7DA" />
-    <!-- Live Tile & Taskbar Pin-->
-    <!--<meta name="application-name" content="Wolfy1339" />
-    <meta name="msapplication-starturl" content="http://wolfy1339.tk" />
-    <meta name="msapplication-navbutton-color" content="#ebf5ff" />
-    <meta name="msapplication-window" content="width=1024;height=768" />
-    <meta name="msapplication-tooltip" content="Go to Wolfy1339" />
-    <meta name="msapplication-task" content="name=Infos;action-uri=http://brilliant-minds.tk/index.html" />-->
-    <!-- flip-Ahead -->
-    <!--<link rel="next" href="infos.html" />-->
-    <!-- CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet prefetch" />
-    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet prefetch" />
-    <link href="style.css" rel="stylesheet prefetch" />
-
-    <!-- Compatibility layer for ie -->
-    <!--[if lt IE 9]>
-    <script src="html5shiv.js"></script>
-    <script src="respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Fix for IE mobile -->
-    <script type="text/javascript">if (navigator.userAgent.match(/IEMobile\/10\.0/)) { var msViewportStyle = document.createElement("style"); msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}")); document.querySelector("head").appendChild(msViewportStyle) }</script>
-</head>
-<body>
-    <div class="container">
-      <div class="masthead">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="Home.html">Hub</a></li>
-            <li><a href="build.html">BuildServ</a></li>
-            <li class="active"><a href="irc.html">IRC</a></li>
-            <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
-          </ul>
-          <h2>Wolfy1339<br><small>IRC</small></h2>
-      </div>
-      <hr>
-      
-        <div class="row subheadings">
-      	  <div class="col-md-6">
-      	    <a href="irc://irc.freenode.net:6667/##wolfy1339">
-      	    	<img src="img/irc.png" width="64px" height="64px">
-      	    	<h4>Freenode</h4>
-      	    </a>
-      	    <p>You can find me wolfy1339 and my bots on the Freendoe IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
-      	    
-      	    <a href="https://github.com/wolfy1339?tab=repositories">
-      	      <img src="img/github.png">
-      	      <h4>Bots</h4>
-      	    </a>
-      	    <p>You can find all my bots' source code on <a href="https://github.com/wolfy1339?tab=repositories">my GitHub</a></p>
-      	  </div>
-        </div>
-
-      <hr>
-
-      <div class="footer">
-        <a class="text-muted" href="https://github.com/wolfy1339/wolfy1339.github.io">repo</a>
-      </div>
-
-    </div>
-
-    <!-- JavaScript -->
-    <script src="bootstrap/js/jquery.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-</body>
-</html>
+---
+layout: default
+title: IRC
+---
+<div class="row subheadings">
+  <div class="col-md-6">
+    <a href="irc://irc.freenode.net:6667/##wolfy1339">
+      <img src="img/irc.png" width="64px" height="64px">
+      <h4>Freenode</h4>
+    </a>
+    <p>You can find me wolfy1339 and my bots on the Freendoe IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
+    <a href="https://github.com/wolfy1339?tab=repositories">
+      <img src="img/github.png">
+      <h4>Bots</h4>
+    </a>
+    <p>You can find all my bots' source code on <a href="https://github.com/wolfy1339?tab=repositories">my GitHub</a></p>
+  </div>
+</div>
