--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Sandbox
+nav: Community Hub
 ---
 <div class="jumbotron">
   <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" width="175px" class="img-responsive logo" />
