Replace h3 with span.h3

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ description: Welcome to wolfy1339's Website Home page. Here will be the landing 
   <div class="col-md-6">
     <a href="Home.html">
       <img src="img/wolf.jpeg" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
-      <h3 title="Access Wolfy1339's website">wolfy1339</h3>
+      <span class="h3" title="Access Wolfy1339's website">wolfy1339</span>
     </a>
   </div>
   <div class="col-md-6">
-    <a href="//techno156.wolfy1339.tk">
+    <a href="http://techno156.wolfy1339.tk">
       <img src="img/techno156.png" type="image/png" class="logo img-responsive" />
-      <h3 title="Access techno156's wesite">techno156</h3>
+      <span class="h3" title="Access techno156's wesite">techno156</span>
     </a>
   </div>
 </div>
