--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Index
+title: Home
 description: Welcome to wolfy1339's Website Home page. Here will be the landing page for my website. You can choose to access techno156's webpage ot to access mine.
 ---
 <h1>Welcome, please choose which website to visit</h1>
