--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@ nav: Community Hub
 <div class="row subheadings">
   <div class="col-md-6">
     <a href="https://github.com/wolfy1339">
-      <img src="img/github.png" id ="GitHub" alt="GitHub" rel="prefetch" height="64" width="64">
+      <img src="img/github.svg" onerror="this.src='img/github.png'" id ="GitHub" alt="GitHub" rel="prefetch" height="64" width="64">
       <h4>GitHub</h4>
     </a>
     <p>I participate in community projects like the BMN <a href="http://brilliant-minds.github.io/mod.html">The Powder Toy mod</a> and their <a href="http://brilliant-minds.github.io">website</a>.</p>
