--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@ nav: Community Hub
   <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" width="175px" class="img-responsive logo" />
   <h1>Wolfy1339</h1>
   <div id="hub-jumbotron-text">
-    <p class="lead">About me</p>
+    <span class="lead">About me</span>
     <p class="sub-lead">I'm <span title="[wolf,y '1339">wolfy1339</span>. I do very, very basic <a href="http://en.wikipedia.org/wiki/Lua_programming_language" title="It's not an acronym, 2nd and 3rd letters are lowercase.">Lua</a> &amp; <a href="http://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
       <br/>My site is built in <a href="http://en.wikipedia.org/wiki/HTML5">HTML5</a> and using <a href="http://getbootstrap.com">Twitter Bootstrap</a>
     </p>
