--- a/Home.html
+++ b/Home.html
@@ -7,8 +7,8 @@ nav: Community Hub
   <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" width="175px" class="img-responsive logo" />
   <h1>Wolfy1339</h1>
   <span class="lead">About me</span>
-  <p class="sub-lead">I'm <span title="[wolf,y '1339">wolfy1339</span>. I do very, very basic <a href="http://en.wikipedia.org/wiki/Lua_programming_language" title="It's not an acronym, 2nd and 3rd letters are lowercase.">Lua</a> &amp; <a href="http://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
-    <br/>My site is built in <a href="http://en.wikipedia.org/wiki/HTML5">HTML5</a> and using <a href="http://getbootstrap.com">Twitter Bootstrap</a>
+  <p class="sub-lead">I'm wolfy1339. I do HTML, CSS, JavaScript (using jQuery) plus some basic Lua &amp; Python.
+    <br/>My site is built in HTML5 and using Bootstrap
   </p>
   <a class="btn btn-lg btn-success" href="http://powdertoy.co.uk/Groups/Page/View.html?Group=832">Group Page</a>
 </div>
@@ -24,7 +24,7 @@ nav: Community Hub
       <img src="img/irc.png" alt="Freenode" rel="prefetch" height="64" width="64">
       <h4>IRC</h4>
     </a>
-    <p>Meet other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=powder">Webchat</a> for a quick talk.</p>
+    <p>You can talk to me or other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=powder">Webchat</a> for a quick talk.</p>
   </div>
   <div class="col-md-6">
     <a href="http://powdertoy.co.uk/Browse.html?Search_Query=wolfy1339">
