Try out new format for mod download menu

--- a/mod.html
+++ b/mod.html
@@ -14,13 +14,19 @@ nav: Mod
     <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-      <div class="btn-group btn-group-vertical">
-        <a class="btn btn-success" href="#">Windows 32-bit</a>
-        <a class="btn btn-default" href="#">Windows 64-bit</a>
+      <div class="col-xs-6">
+        <span class="dropdown-header">Windows</span>
+        <div class="btn-group btn-group-vertical">
+          <a class="btn btn-success" href="#">W32-bit</a>
+          <a class="btn btn-default" href="#">64-bit</a>
+        </div>
       </div>
-      <div class="btn-group btn-group-vertical">
-        <a class="btn btn-default" href="#">Linux 32-bit</a>
-        <a class="btn btn-default" href="#">Linux 64-bit</a>
+      <div class="col-xs-6">
+        <span class="dropdown-header">Linux</span>
+        <div class="btn-group btn-group-vertical">
+          <a class="btn btn-default" href="#">32-bit</a>
+          <a class="btn btn-default" href="#">64-bit</a>
+        </div>
       </div>
     </ul>
   </div>
