Use svg in mod.html

--- a/mod.html
+++ b/mod.html
@@ -37,7 +37,7 @@ nav: Mod
 <div class="row subheadings">
   <div class="col-md-6">
     <a href="https://github.com/wolfy1339/Wolfy-Powder-Toy">
-      <img src="img/github.png" alt="GitHub">
+      <img src="img/github.svg" onerror="this.src='img/github.png'" class="svg" alt="GitHub">
       <h4>GitHub</h4>
     </a>
     <p>You can find the source code of this mod on GitHub and participate with feedback and code.</p>
