--- a/Home.html
+++ b/Home.html
@@ -20,11 +20,11 @@ nav: Community Hub
       <h4>GitHub</h4>
     </a>
     <p>I participate in community projects like the BMN <a href="http://brilliant-minds.github.io/mod.html">The Powder Toy mod</a> and their <a href="http://brilliant-minds.github.io">website</a>.</p>
-    <a href="irc://irc.freenode.net:6667/powder">
-      <img src="img/irc.png" alt="Freenode" rel="prefetch" height="64" width="64">
+    <a href="ircs://irc.libera.chat:6697/powder">
+      <img src="img/irc.svg" onerror="this.src='img/github.png'" alt="Libera Chat" rel="prefetch" height="64" width="64">
       <h4>IRC</h4>
     </a>
-    <p>You can talk to me or other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="http://webchat.freenode.net/?channels=powder">Webchat</a> for a quick talk.</p>
+    <p>You can talk to me or other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="https://kiwiirc.com/nextclient/irc.libera.chat/powder">Webchat</a> for a quick talk.</p>
   </div>
   <div class="col-md-6">
     <a href="http://powdertoy.co.uk/Browse.html?Search_Query=wolfy1339">
