remove another freenode reference

--- a/irc.html
+++ b/irc.html
@@ -4,9 +4,9 @@ title: IRC
 ---
 <div class="row subheadings">
   <div class="col-md-6">
-    <a href="irc://irc.freenode.net:6667/##wolfy1339">
+    <a href="ircs://irc.libera.chat:6697/##wolfy1339">
       <img src="img/irc.png" width="64px" height="64px">
-      <h4>Freenode</h4>
+      <h4>Libera Chat</h4>
     </a>
     <p>You can find me wolfy1339 and my bots on the Freendoe IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
     <a href="https://github.com/wolfy1339?tab=repositories">
