missed this reference

--- a/Home.html
+++ b/Home.html
@@ -24,7 +24,7 @@ nav: Community Hub
       <img src="img/irc.svg" onerror="this.src='img/github.png'" alt="Libera Chat" rel="prefetch" height="64" width="64">
       <h4>IRC</h4>
     </a>
-    <p>You can talk to me or other TPT members inside the #powder channel at irc.freenode.net. You can alternatively use the <a href="https://kiwiirc.com/nextclient/irc.libera.chat/powder">Webchat</a> for a quick talk.</p>
+    <p>You can talk to me or other TPT members inside the #powder channel at irc.libera.chat. You can alternatively use the <a href="https://kiwiirc.com/nextclient/irc.libera.chat/powder">Webchat</a> for a quick talk.</p>
   </div>
   <div class="col-md-6">
     <a href="http://powdertoy.co.uk/Browse.html?Search_Query=wolfy1339">
