Remove reference to "Freendoe"
not only was it a lingering reference to my previous IRC network, it was typoed LMAO

--- a/irc.html
+++ b/irc.html
@@ -5,12 +5,12 @@ title: IRC
 <div class="row subheadings">
   <div class="col-md-6">
     <a href="ircs://irc.libera.chat:6697/##wolfy1339">
-      <img src="img/irc.png" width="64px" height="64px">
+      <img src="img/irc.svg" onerror="this.src='img/github.png'" alt="Libera Chat" width="64px" height="64px">
       <h4>Libera Chat</h4>
     </a>
-    <p>You can find me wolfy1339 and my bots on the Freendoe IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
+    <p>You can find me wolfy1339 and my bots on the Libera IRC Network, in the channels ##wolfy1339, #botters, #powder and many more!</p>
     <a href="https://github.com/wolfy1339?tab=repositories">
-      <img src="img/github.png">
+      <img src="img/github.svg" onerror="this.src='img/github.png'" id ="GitHub" alt="GitHub" rel="prefetch" height="64" width="64">
       <h4>Bots</h4>
     </a>
     <p>You can find all my bots' source code on <a href="https://github.com/wolfy1339?tab=repositories">my GitHub</a></p>
