--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 ---
 layout: default
-title: Home
-description: Welcome to wolfy1339's Website Home page. Here will be the landing page for my website. You can choose to access techno156's webpage ot to access mine.
+title: Sandbox
+nav: Community Hub
 ---
-<h1>Welcome, please choose which website to visit</h1>
-<div class="row" id="index-row">
+<div class="jumbotron">
+  <img src="img/wolf.jpeg" type="image/jpeg" id="hub-logo" alt="wolfy1339" width="175px" class="img-responsive logo" />
+  <h1>Wolfy1339</h1>
+  <span class="lead">About me</span>
+  <p class="sub-lead">I'm wolfy1339. I do HTML, CSS, JavaScript (using jQuery) plus some basic Lua &amp; Python.
+    <br/>My site is built in HTML5 and using Bootstrap
+  </p>
+  <a class="btn btn-lg btn-success" href="http://powdertoy.co.uk/Groups/Page/View.html?Group=832">Group Page</a>
+</div>
+<hr/>
+<div class="row subheadings">
   <div class="col-md-6">
-    <a href="Home.html">
-      <img src="img/wolf.jpeg" alt="wolfy1339's howling wolf logo" class="logo img-responsive" />
-      <span class="h3" title="Access Wolfy1339's website">wolfy1339</span>
+    <a href="https://github.com/wolfy1339">
+      <img src="img/github.svg" id ="GitHub" alt="GitHub" rel="prefetch" height="64" width="64">
+      <h4>GitHub</h4>
     </a>
-  </div>
-  <div class="col-md-6">
-    <a href="http://techno156.wolfy1339.tk">
-      <img src="img/techno156.png" type="image/png" class="logo img-responsive" />
-      <span class="h3" title="Access techno156's wesite">techno156</span>
+    <p>I participate in community projects, including Octokit.</p>
+    <a href="ircs://irc.libera.chat:6697/hellomouse">
+      <img src="img/irc.svg" alt="Libera Chat" rel="prefetch" height="64" width="64">
+      <h4>IRC</h4>
     </a>
+    <p>You can talk to me or other TPT members inside the #powder channel at irc.libera.chat. You can alternatively use the <a href="https://web.libera.chat/powder">Webchat</a> for a quick talk.</p>
   </div>
 </div>
